* Email protection methode using recaptcha. (stranger)
* Plugin manager using DataBase. (stranger)
* New config Option to select allowed plugins. (stranger)
* #21: Profile Module (stranger)
* #26: Search improvements (stranger/RLankford)
* #19: Themable administrative area (stranger/Nekro)
* #230: Installer Improvements. (stranger)
* #532: new function icms_buildCriteria() (malanciault)

'''Changed'''
* Identicon for Gravatar added (sato-san)
* Admin`s RSS feed to simplepie. (marcan/stranger)
* email protection option to a multiple option one. (stranger)
* impresstheme is using $icms_values. (stranger)
* in installer config settings, changed some settings to use textsarea instead of textarea. as was causing problems with those fields if URI's were entered etc. (vaughan)
* banner.swf (nadine/sato-san)

'''Improved'''
* #518:  Improvement to frontside block menu (Aph3x)
* #415:  Improvement to MultiLanguage php block (talon39/david)
* Ongoing additions to  API documentation.
* register.tpl mail template contains more user`s information. (stranger)
* adminactivate.tpl mail template contains more user`s information. (stranger)
* Updated TinyMCE to Version 3.2.1.1. (stranger)
* Updated TCPDF to version 4.5.014. (stranger)
* Captcha class. (stranger)
* Filters on group edit form to only allow options assigned to the current user
* Updated system to version 1.20. (stranger)
* Updated HTML Purifier library from 3.1.1 to 3.2.0 (vaughan)
* smarty values to make them use both $xoops_value and $icms_value. (stranger)
* Fixed issues in redirection in RTL mode. (stranger)
* Updated xoops_getcss to read rtl styles. (stranger)
* Method we use RTL. (stranger)
* Removed theme_rtl system at all. (stranger)
* Updated Snoopy from v1.2.3 to v1.2.4. (stranger)
* Added check to preferences, if closesite is true (site closed) it is no longer possible to change password encryption until site is reopened. (vaughan)
* ICMS Captcha Class. (stranger)