@@ -1,0 +1,10 @@
+<div class="icms_breadcrumb">
+	<{foreach item=breadcrumb_item from=$icms_breadcrumb_items name=loop}>
+		<{if $breadcrumb_item.link}>
+			<a href="<{$breadcrumb_item.link}>"><{$breadcrumb_item.caption}></a>
+		<{else}>
+			<{$breadcrumb_item.caption}>
+		<{/if}>
+		<{if !$smarty.foreach.loop.last}>&nbsp;>&nbsp;<{/if}>
+	<{/foreach}>
+</div>
